--- a/telemetry/collector/src/main/resources/application.properties
+++ b/telemetry/collector/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 server.port=8080
-kafka.url=${KAFKA_URL:http://localhost:9092}
 logging.level.org.zalando.logbook=TRACE
+
+kafka.url=${KAFKA_URL:http://localhost:9092}
+
+hub.topic="telemetry.hubs.v1"
+sensor.topic="telemetry.sensors.v1"
