--- a/telemetry/collector/src/main/resources/application.properties
+++ b/telemetry/collector/src/main/resources/application.properties
@@ -4,5 +4,5 @@ logging.level.org.zalando.logbook=TRACE
 
 kafka.url=${KAFKA_URL:http://localhost:9092}
 
-hub.topic="telemetry.hubs.v1"
-sensor.topic="telemetry.sensors.v1"
+hub.topic=telemetry.hubs.v1
+sensor.topic=telemetry.sensors.v1
