--- a/telemetry/analyzer/src/main/resources/application.yaml
+++ b/telemetry/analyzer/src/main/resources/application.yaml
@@ -2,10 +2,18 @@ spring:
   application:
     name: analyzer
   config:
-    import: configserver:http://localhost:8888
+    import: "configserver:"
   cloud:
     config:
       fail-fast: true
       retry:
         use-random-policy: true
         max-interval: 6000
+      discovery:
+        enabled: true
+        service-id: config-server
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://${eureka.instance.hostname:localhost}:${eureka.instance.port:8761}/eureka/
