--- a/infra/config-server/src/main/resources/application.yaml
+++ b/infra/config-server/src/main/resources/application.yaml
@@ -1,6 +1,3 @@
-server:
-  port: 8888
-
 spring:
   application:
     name: config-server
@@ -12,3 +9,11 @@ spring:
         native:
           search-locations:
             - classpath:config/telemetry/{application}
+      discovery:
+        enabled: true
+        service-id: config-server
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://${eureka.instance.hostname:localhost}:${eureka.instance.port:8761}/eureka/
