--- a/commerce/warehouse/pom.xml
+++ b/commerce/warehouse/pom.xml
@@ -5,17 +5,16 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>ru.yandex.practicum</groupId>
-        <artifactId>smart-home-tech</artifactId>
+        <artifactId>commerce</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>commerce</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>shopping-store</module>
-        <module>shopping-cart</module>
-        <module>warehouse</module>
-        <module>interaction-api</module>
-    </modules>
+    <artifactId>warehouse</artifactId>
+
+    <properties>
+        <maven.compiler.source>23</maven.compiler.source>
+        <maven.compiler.target>23</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
 </project>
