add modules shopping-store, shopping-cart, warehouse, interaction-api

--- a/infra/config-server/src/main/resources/application.yaml
+++ b/infra/config-server/src/main/resources/application.yaml
@@ -1,3 +1,6 @@
+server:
+  port: 0
+
 spring:
   application:
     name: config-server
@@ -9,6 +12,7 @@ spring:
         native:
           search-locations:
             - classpath:config/telemetry/{application}
+            - classpath:config/commerce/{application}
       discovery:
         enabled: true
         service-id: config-server
