add Feign and Circuit Breaker

--- a/infra/config-server/src/main/resources/config/commerce/shopping-cart/application.yaml
+++ b/infra/config-server/src/main/resources/config/commerce/shopping-cart/application.yaml
@@ -16,3 +16,17 @@ spring:
   sql:
     init:
       mode: always
+
+resilience4j.circuitbreaker:
+  configs:
+    default:
+      slidingWindowSize: 50
+      failureRateThreshold: 50
+  instances:
+    warehouse:
+      slidingWindowSize: 10
+      waitDurationInOpenState: 10000
+      permittedNumberOfCallsInHalfOpenState: 3
+      slidingWindowType: COUNT_BASED
+      minimumNumberOfCalls: 5
+      automaticTransitionFromOpenToHalfOpenEnabled: true
