fix UUID in Product

--- a/infra/config-server/src/main/resources/config/commerce/shopping-cart/application.yaml
+++ b/infra/config-server/src/main/resources/config/commerce/shopping-cart/application.yaml
@@ -30,3 +30,9 @@ resilience4j.circuitbreaker:
       slidingWindowType: COUNT_BASED
       minimumNumberOfCalls: 5
       automaticTransitionFromOpenToHalfOpenEnabled: true
+
+feign:
+  client:
+    config:
+      warehouse:
+        url: http://warehouse/api/v1/warehouse
