--- a/compose.yaml
+++ b/compose.yaml
@@ -42,7 +42,8 @@ services:
     environment:
       - POSTGRES_PASSWORD=home
       - POSTGRES_USER=smart
-      - POSTGRES_DB=smarthome
+    volumes:
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     healthcheck:
       test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
       timeout: 5s
