--- a/infra/config-server/src/main/resources/config/commerce/shopping-cart/application.yaml
+++ b/infra/config-server/src/main/resources/config/commerce/shopping-cart/application.yaml
@@ -3,10 +3,10 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:6541/smarthome
+    url: jdbc:postgresql://localhost:6541/cart
     driver-class-name: org.postgresql.Driver
-    username: smart
-    password: home
+    username: cart_user
+    password: password3
   jpa:
     hibernate:
       ddl-auto: none
