--- a/infra/config-server/src/main/resources/config/commerce/shopping-cart/application.yaml
+++ b/infra/config-server/src/main/resources/config/commerce/shopping-cart/application.yaml
@@ -16,18 +16,24 @@ spring:
   sql:
     init:
       mode: always
+  cloud:
+    openfeign:
+      circuitbreaker:
+        enabled: true
 
 resilience4j:
   circuitbreaker:
     configs:
       default:
-        sliding-window-size: 50
-        failure-rate-threshold: 50
-    instances:
-      warehouse:
         sliding-window-size: 10
-        wait-duration-in-open-state: 10000
+        wait-duration-in-open-state: 10s
         permitted-number-of-calls-in-half-open-state: 3
         sliding-window-type: COUNT_BASED
         minimum-number-of-calls: 5
         automatic-transition-from-open-to-half-open-enabled: true
+        slow-call-duration-threshold: 3s
+        slow-call-rate-threshold: 50
+  timelimiter:
+    configs:
+      default:
+        timeout-duration: 5s
