add Delivery and Order

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
         <module>infra/config-server</module>
         <module>infra/discovery-server</module>
         <module>infra/gateway</module>
+        <module>commerce/order</module>
+        <module>commerce/delivery</module>
     </modules>
 
     <properties>
