add Payment and Deli

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>infra/gateway</module>
         <module>commerce/order</module>
         <module>commerce/delivery</module>
+        <module>commerce/payment</module>
     </modules>
 
     <properties>
