--- a/infra/config-server/src/main/resources/config/infra/gateway/application.yaml
+++ b/infra/config-server/src/main/resources/config/infra/gateway/application.yaml
@@ -30,7 +30,30 @@ spring:
                 statuses: NOT_FOUND
                 methods: GET
                 exceptions: ru.yandex.practicum.exception.ProductNotFoundException
-
+        - id: order_service_route
+          uri: lb://order
+          predicates:
+            - Path=/order/**
+          filters:
+            - PrefixPath=/api/v1
+        - id: warehouse_service_route
+          uri: lb://warehouse
+          predicates:
+            - Path=/warehouse/**
+          filters:
+            - PrefixPath=/api/v1
+        - id: payment_service_route
+          uri: lb://payment
+          predicates:
+            - Path=/payment/**
+          filters:
+            - PrefixPath=/api/v1
+        - id: delivery_service_route
+          uri: lb://delivery
+          predicates:
+            - Path=/delivery/**
+          filters:
+            - PrefixPath=/api/v1
 logging:
   level:
     org:
